--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,52 @@
-# Xcode
-.DS_Store
-xcuserdata/
-*.xcodeproj/xcuserdata/
 
-# Swift Package Manager
+
+build/
+DerivedData/
+
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+**/xcuserdata/
+Clendar.xcodeproj/xcuserdata/Vinh.xcuserdatad/xcschemes/xcschememanagement.plist
+Clendar.xcodeproj/xcshareddata/xcschemes/ClendarWatchApp.xcscheme
+Clendar.xcodeproj/xcshareddata/xcschemes/ClendarWatchApp (Complication).xcscheme
+
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+timeline.xctimeline
+playground.xcworkspace
+
 .build/
 
-# CocoaPods
-Pods/
-*.lock
 
+Pods/
+*.xcworkspace
+
+
+Carthage/Build
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+fastlane/Appfile
+fastlane/builds/
+
+iOSInjectionProject/
+
+*.generated.swift
+
+TODO.md
