--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
        - uses: ruby/setup-ruby@v1
          with:
-          ruby-version: ‘2.6.10’
+          ruby-version: '2.6.10'
        - uses: maierj/fastlane-action@v2.2.0
          with:
           lane: 'release'
