--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -11,16 +11,19 @@ jobs:
     name: Release MacOS app with Fastlane
     runs-on: macos-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-       - uses: ruby/setup-ruby@v1
-         with:
-          ruby-version: '2.6.10'
-       - uses: maierj/fastlane-action@v2.2.0
-         with:
-          lane: 'release'
-         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+steps:
+  - name: Checkout
+    uses: actions/checkout@v2
+    with:
+      fetch-depth: 0
+  - name: Setup Ruby
+    uses: ruby/setup-ruby@v1
+    with:
+      ruby-version: '2.6.10'
+  - name: Execute Fastlane Action
+    uses: maierj/fastlane-action@v2.2.0
+    with:
+      lane: 'release'
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
