--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6.10'
-
+          bundler-version: '2.4.0'
       - name: Execute Fastlane Action
         uses: maierj/fastlane-action@v2.2.0
         with:
