--- a/j2m.xcodeproj/xcshareddata/xcschemes/j2m.xcscheme
+++ b/j2m.xcodeproj/xcshareddata/xcschemes/j2m.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C950A5492BB591F7000DE776"
+               BuildableName = "j2mTests.xctest"
+               BlueprintName = "j2mTests"
+               ReferencedContainer = "container:j2m.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
